lustre/ofd/ofd_internal.h
@@ -106,7 +106,8 @@ struct ofd_seq {
 	struct mutex		os_create_lock;
 	atomic_t		os_refc;
 	struct dt_object	*os_lastid_obj;
-	unsigned long		os_destroys_in_progress:1;
+	unsigned long		os_destroys_in_progress:1,
+				os_last_id_synced:1;
 };
 
 struct ofd_device {
